# mlops_assignment_aibidia

./: .gitignore  .pdm-python  Dockerfile  Jenkinsfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflow/: main.yaml
.github/workflows/: main.yaml
infra/: Dockerfile
src/model_src/: Makefile  iris_model.pkl  pyproject.toml  train.py
