[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Prasad Z", email = "prasad@email.com"},
]
dependencies = ["fastapi>=0.119.1", "pydantic>=2.12.3", "mlflow==3.1.1", "joblib>=1.5.2", "numpy>=2.3.4", "scikit-learn>=1.7.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
